CHANGES-1.6.txt
---------------

CHANGES IN CUPS V1.6.3

	- The configure script now prefers Clang over GCC.
	- Fixed a compile problem on AIX (STR #4307)
	- Fixed a URI encoding issue for hostnames containing the ` (backquote)
	  character (<rdar://problem/14243133>)
	- Added support for RFC 6874's IPv6 link local address format in URIs
	  (<rdar://problem/13979453>)
	- The USB backend could crash on libusb-based systems if USB was
	  disabled in the BIOS (<rdar://problem/13875729>)
	- Fixed a rounding error in the PWG media size mapping code
	  (<rdar://problem/13493241>)
	- Fixed several ipptool test files that used old STATUS names.
	- Kerberos credentials could get truncated when printing to a shared
	  printer.
	- Printing using "ipps" URIs was not encrypted.
	- Insecure ICC profiles prevented installation of user profiles for a
	  printer on OS X.
	- Added more USB quirks for the libusb-based backend (STR #4311,
	  <rdar://problem/13736470>)
	- The Russian web interface templates were broken (STR #4310)
	- The scheduler no longer tries to do Kerberos authentication over the
	  loopback interface.
	- The IPP backend could fail to pause a job for authentication
	  (STR #4298)
	- Fixed a regression on the handling of auth keys on OS X if the
	  cups-files.conf was not present or did not contain a SystemAuthKey
	  value.
	- The scheduler incorrectly did a reverse lookup of the server address
	  when HostNameLookups was turned off (STR #4302)
	- The scheduler incorrectly computed the final content type value when
	  null filters were present.


CHANGES IN CUPS V1.6.2

	- Documentation fixes (STR #4229, STR #4239, STR #4234, STR #4248,
	  STR #4259)
	- Security: All file, directory, user, and group settings are now stored
	  in a separate cups-files.conf configuration file that cannot be set
	  through the CUPS web interface or APIs (STR #4223)
	- Added a Czech localization (STR #4201)
	- Added a French localization (STR #4247)