@@ -12,7 +12,7 @@
 .\"   which should have been included with this file.  If this file is
 .\"   file is missing or damaged, see the license at "http://www.cups.org/".
 .\"
-.TH client.conf 5 "CUPS" "23 April 2012" "Apple Inc."
+.TH client.conf 5 "CUPS" "25 June 2013" "Apple Inc."
 .SH NAME
 client.conf \- client configuration file for cups
 .SH DESCRIPTION
@@ -46,6 +46,12 @@ ServerName /domain/socket
 .br
 Specifies the address and optionally the port to use when connecting to the
 server. \fBNote: Not supported on OS X 10.7 or later.\fR
+.TP 5
+ServerName hostname-or-ip-address[:port]/version=1.1
+.br
+Specifies the address and optionally the port to use when connecting to a
+server running CUPS 1.3.12 and earlier. \fBNote: Not supported on OS X 10.7 or
+later.\fR
 .TP 5
 User name
 .br
