@@ -5,6 +5,8 @@ CHANGES IN CUPS V1.6.3
 
 	- The configure script now prefers Clang over GCC.
 	- Fixed a compile problem on AIX (STR #4307)
+	- Added documentation about the /version=1.1 option to ServerName in
+	  client.conf (<rdar://problem/14216262>)
 	- Fixed a URI encoding issue for hostnames containing the ` (backquote)
 	  character (<rdar://problem/14243133>)
 	- Added support for RFC 6874's IPv6 link local address format in URIs
